Fix overlay misalignment.

--- a/css/segments.css
+++ b/css/segments.css
@@ -75,7 +75,7 @@ body {
   height: 100%;
   overflow: hidden;
   position: absolute;
-  top: 6.5%;
+  top: 7.5%;
   width: 100%;
   z-index: 10;
 }
